// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextArea > should render 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="border-t-theme-secondary-400 dark:border-t-theme-secondary-700 dim:border-t-theme-dim-500 pointer-events-none absolute right-3 bottom-4 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent md:block"
    />
    <div
      class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 dim:border-theme-dim-500 focus-within:ring-1 relative"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <textarea
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base! resize-none min-h-[8rem] md:min-h-auto md:resize-y"
          data-testid="TextArea"
          style="height: 4px;"
          type="text"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render as disabled 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="border-t-theme-secondary-400 dark:border-t-theme-secondary-700 dim:border-t-theme-dim-500 pointer-events-none absolute right-3 bottom-4 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent md:block"
    />
    <div
      class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 dim:border-theme-dim-700 dim:bg-theme-dim-950 focus-within:ring-1 relative"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <textarea
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base! text-theme-secondary-text min-h-[8rem] md:min-h-auto md:resize-y resize-none"
          data-testid="TextArea"
          disabled=""
          type="text"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render as invalid 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="border-t-theme-secondary-400 dark:border-t-theme-secondary-700 dim:border-t-theme-dim-500 pointer-events-none absolute right-3 bottom-4 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent md:block"
    />
    <div
      class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 relative"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <textarea
          aria-invalid="true"
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base! resize-none min-h-[8rem] md:min-h-auto md:resize-y"
          data-testid="TextArea"
          type="text"
        />
      </div>
      <div
        class="divide-theme-secondary-300 dark:divide-theme-secondary-800 dim:divide-theme-dim-700 flex items-center divide-x absolute right-0 bottom-full mb-2 text-theme-danger-500"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <span>
            <span>
              <span
                data-testid="Input__error"
              >
                <div
                  class="text-theme-danger-500"
                >
                  <div
                    style="height: 20px; width: 20px;"
                  >
                    <svg
                      id="circle-exclamation-mark"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="10"
                          r="9"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 10.5v-5"
                          stroke-linecap="round"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 14h0"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
